--- a/src/template.html
+++ b/src/template.html
@@ -24,7 +24,9 @@
     <!-- The application will be rendered inside this element,
 	     because `app/client.js` references it -->
     <div id="sapper" class="flex-1 container mx-auto p-4">%sapper.html%</div>
-    <footer class="w-full pin-b text-center bg-gray-200 p-5 text-gray-700">
+    <footer
+      class="w-full pin-b text-center bg-gray-200 p-5 text-gray-800 mt-24"
+    >
       Copyright © 2019 - Thomas Maitret - Tous droits réservés
     </footer>
 
