--- a/src/template.html
+++ b/src/template.html
@@ -20,15 +20,16 @@
 	     the current page has one -->
     %sapper.head%
   </head>
-  <body class="flex flex-col min-h-screen">
+  <body class="antialiased subpixel-antialiased">
     <!-- The application will be rendered inside this element,
 	     because `app/client.js` references it -->
-    <div id="sapper" class="flex-1 container mx-auto p-4">%sapper.html%</div>
-    <footer
+    <div id="sapper" class="container mx-auto px-4">%sapper.html%</div>
+
+    <!-- <footer
       class="w-full pin-b text-center bg-gray-200 p-5 text-gray-800 mt-24"
     >
       Copyright © 2019 - Thomas Maitret - Tous droits réservés
-    </footer>
+    </footer> -->
 
     <!-- Sapper creates a <script> tag containing `app/client.js`
 	     and anything else it needs to hydrate the app and
