--- a/src/template.html
+++ b/src/template.html
@@ -2,8 +2,14 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
+    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="author" content="Thomas Maitret" />
     <meta name="theme-color" content="#5352ed" />
+    <meta
+      name="description"
+      content="Portfolio de Thomas Maitret, jeune développeur Front-end basé à Paris."
+    />
 
     %sapper.base%
 
