--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="index.css" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
 
     <!-- Sapper generates a <style> tag containing critical CSS
