--- a/src/template.html
+++ b/src/template.html
@@ -8,28 +8,20 @@
     <meta name="theme-color" content="#5352ed" />
     <meta
       name="description"
-      content="Portfolio de Thomas Maitret, jeune développeur Front-end basé à Paris."
+      content="Portfolio de Thomas Maitret, développeur Front-end basé à Paris."
     />
 
     %sapper.base%
 
     <link rel="stylesheet" href="global.css" />
-    <link rel="stylesheet" href="index.css" />
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
 
-    <!-- Sapper generates a <style> tag containing critical CSS
-	     for the current page. CSS for the rest of the app is
-	     lazily loaded when it precaches secondary pages -->
     %sapper.styles%
 
-    <!-- This contains the contents of the <svelte:head> component, if
-	     the current page has one -->
     %sapper.head%
   </head>
   <body class="antialiased subpixel-antialiased">
-    <!-- The application will be rendered inside this element,
-	     because `app/client.js` references it -->
     <div id="sapper" class="container mx-auto px-4">%sapper.html%</div>
 
     <!-- <footer
@@ -38,9 +30,6 @@
       Copyright © 2019 - Thomas Maitret - Tous droits réservés
     </footer> -->
 
-    <!-- Sapper creates a <script> tag containing `app/client.js`
-	     and anything else it needs to hydrate the app and
-	     initialise the router -->
     %sapper.scripts%
   </body>
 </html>
