--- a/src/template.html
+++ b/src/template.html
@@ -14,12 +14,9 @@
     %sapper.base%
 
     <link rel="stylesheet" href="global.css" />
-    <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
 
-    %sapper.styles%
-
-    %sapper.head%
+    %sapper.styles% %sapper.head%
   </head>
   <body class="antialiased subpixel-antialiased">
     <div id="sapper" class="container mx-auto px-4">%sapper.html%</div>
