better config for tailwind + fix global css

--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,6 @@
 
     %sapper.base%
 
-    <link rel="stylesheet" href="global.css" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
 
     <!-- Sapper creates a <script> tag containing `src/client.js`
@@ -30,7 +29,7 @@
 	     the current page has one -->
     %sapper.head%
   </head>
-  <body class="antialiased subpixel-antialiased">
+  <body class="antialiased">
     <div id="sapper" class="container mx-auto px-4">%sapper.html%</div>
   </body>
 </html>
