update tailwind + dark mode

--- a/src/template.html
+++ b/src/template.html
@@ -29,7 +29,7 @@
 	     the current page has one -->
     %sapper.head%
   </head>
-  <body class="antialiased">
+  <body class="antialiased bg-white dark:bg-gray-800">
     <div id="sapper" class="container mx-auto px-4">%sapper.html%</div>
   </body>
 </html>
