apply lightouse advices

--- a/index.html
+++ b/index.html
@@ -3,12 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thomas Maitret - Développeur Front-end</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap"
-      rel="stylesheet"
+    <meta
+      name="Description"
+      content="Portfolio de Thomas Maitret, développeur Front-end basé à Paris."
     />
+    <title>Thomas Maitret - Développeur Front-end</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap"
+      media="print"
+      onload="this.media='all'"
+    />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap"
+      />
+    </noscript>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
@@ -19,9 +36,25 @@
         Je suis Thomas Maitret, développeur Front-end basé à Paris.
       </h2>
       <div class="links">
-        <a href="https://github.com/thomasmaitret/" target="_blank">Github</a>
-        <a href="https://twitter.com/thomasmaitret/" target="_blank">Twitter</a>
-        <a href="https://www.linkedin.com/in/thomas-maitret/" target="_blank">
+        <a
+          href="https://github.com/thomasmaitret/"
+          target="_blank"
+          rel="noopener"
+        >
+          Github
+        </a>
+        <a
+          href="https://twitter.com/thomasmaitret/"
+          target="_blank"
+          rel="noopener"
+        >
+          Twitter
+        </a>
+        <a
+          href="https://www.linkedin.com/in/thomas-maitret/"
+          target="_blank"
+          rel="noopener"
+        >
           LinkedIn
         </a>
       </div>
