--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <link
       rel="preload"
       as="style"
-      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap&text=abdefhijlmnoprFtsuJéàPMTGLwkIvB"
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap&text=abdefhijlmnoprFtsuJéàPMTGLwkIvB"
       media="print"
       onload="this.media='all'"
     />
     <noscript>
       <link
         rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap"
+        href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap&text=abdefhijlmnoprFtsuJéàPMTGLwkIvB"
       />
     </noscript>
     <link rel="stylesheet" href="style.css" />
